--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm install
 
       - name: ⚙️ Build
-        run: npm build
+        run: npm run build
 
       - name: 🧹 Add nojekyll file
         working-directory: build
