--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm install
 
       - name: ⚙️ Build
-        run: npm run build
+        run: PUBLIC_URL="https://teia-community.github.io/multisig-app" npm run build
 
       - name: 🧹 Add nojekyll file
         working-directory: build
